--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -1,1 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 1rem 2rem;
+  width: 400px;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.3);
+}
+input {
+  padding: 12px 20px;
+  border: none;
+  border-radius: 15px;
+  margin: 0.5rem 0;
+  width: 360px;
+  outline: none;
+  background-color: transparent;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.3);
+}
+button {
+  padding: 12px 20px;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+  border: 1px solid grey;
+  cursor: pointer;
+  width: 100%;
+  font-weight: 700;
+  margin-top: 1rem;
+}
+button:hover {
+  border-color: #ccc;
+  background-color: #ccc;
+}
 
